디자인 주석

--- a/app/src/main/res/drawable/bottom_layout_border.xml
+++ b/app/src/main/res/drawable/bottom_layout_border.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"> // 화면 하단 배경
     <item android:bottom="-2dp" android:left="-2dp" android:right="-2dp" android:top="1dp">
         <shape android:shape="rectangle" >
             <solid android:color="#7BD6F8" />
