--- a/app/src/main/res/drawable/border_gray.xml
+++ b/app/src/main/res/drawable/border_gray.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android"> // 통계화면 날짜, 역 설정 배경
 
-    <item>
-        <shape android:shape="rectangle">
-            <stroke android:width="1dp" android:color="#808080"/>
-            <solid android:color="#FFFFFFFF"/>
-        </shape>
-    </item>
+<item>
+    <shape android:shape="rectangle">
+        <stroke android:width="1dp" android:color="#808080"/>
+        <solid android:color="#FFFFFFFF"/>
+    </shape>
+</item>
 
 </selector>
