--- a/app/src/main/res/drawable/border_list_line3.xml
+++ b/app/src/main/res/drawable/border_list_line3.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android"> // 3호선 배경
 
     <item>
         <shape android:shape="rectangle">
