--- a/app/src/main/res/layout/loading_activity.xml
+++ b/app/src/main/res/layout/loading_activity.xml
@@ -15,7 +15,7 @@
                 android:id="@+id/loading"
                 android:layout_width="250dp"
                 android:layout_height="300dp"
-                android:src="@mipmap/ic_launcher_hacheol"/>
+                android:src="@mipmap/ic_launcher_hacheol"/> // 하철이 캐릭터 이미지
 
                 <TextView
                     android:layout_width="match_parent"
@@ -24,7 +24,7 @@
                     android:fontFamily="@font/nanumbarungothicbold"
                     android:text="하철2"
                     android:textColor="#000000"
-                    android:textSize="50dp" />
+                    android:textSize="50dp" /> // 어플리케이션 타이틀
 
 
         </LinearLayout>
