--- a/app/src/main/res/layout/popup_activity.xml
+++ b/app/src/main/res/layout/popup_activity.xml
@@ -24,7 +24,8 @@
         <Button
             android:id="@+id/stayline1"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:background="@drawable/border_list_line1"
             android:fontFamily="@font/nanumbarungothicbold"
             android:text="서울 1호선"
@@ -34,7 +35,8 @@
         <Button
             android:id="@+id/stayline2"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:background="@drawable/border_list_line2"
             android:fontFamily="@font/nanumbarungothicbold"
             android:text="서울 2호선"
@@ -44,7 +46,8 @@
         <Button
             android:id="@+id/stayline3"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:background="@drawable/border_list_line3"
             android:fontFamily="@font/nanumbarungothicbold"
             android:text="서울 3호선"
@@ -54,7 +57,8 @@
         <Button
             android:id="@+id/stayline4"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:background="@drawable/border_list_line4"
             android:fontFamily="@font/nanumbarungothicbold"
             android:text="서울 4호선"
@@ -64,7 +68,8 @@
         <Button
             android:id="@+id/stayline5"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:background="@drawable/border_list_line5"
             android:fontFamily="@font/nanumbarungothicbold"
             android:text="서울 5호선"
@@ -74,7 +79,8 @@
         <Button
             android:id="@+id/stayline6"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:background="@drawable/border_list_line6"
             android:fontFamily="@font/nanumbarungothicbold"
             android:text="서울 6호선"
@@ -84,7 +90,8 @@
         <Button
             android:id="@+id/stayline7"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:background="@drawable/border_list_line7"
             android:fontFamily="@font/nanumbarungothicbold"
             android:text="서울 7호선"
@@ -94,7 +101,8 @@
         <Button
             android:id="@+id/stayline8"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:background="@drawable/border_list_line8"
             android:fontFamily="@font/nanumbarungothicbold"
             android:text="서울 8호선"
@@ -104,7 +112,8 @@
         <Button
             android:id="@+id/stayline9"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:background="@drawable/border_list_line9"
             android:fontFamily="@font/nanumbarungothicbold"
             android:text="서울 9호선"
@@ -114,7 +123,8 @@
         <Button
             android:id="@+id/stayline10"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:background="@drawable/border_list_activity"
             android:fontFamily="@font/nanumbarungothicbold"
             android:text="TEST"
